Fix contact form submission failure text. Inject error string. Pixel crack with covering up the form; set height to 101%

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,6 +33,7 @@ $minimum-mobile-side-padding: calc(.75rem + env(safe-area-inset-left));
 }
 
 $animation-duration: 100ms;
+$list-padding-left: 2rem;
 
 $default-max-content-width: 50rem;
 @mixin standard-block-behavior($max-width: $default-max-content-width) {
